# traildb-benchmark

./: .gitignore  .travis.yml  LICENSE  README.md  benchmark.py
c/: Dockerfile  benchmark.c
crystal/: .gitignore  Dockerfile  benchmark.cr  shard.yml
go/: Dockerfile  benchmark.go
haskell/: Dockerfile  LICENSE  Main.hs  benchmark-fast  benchmark-pretty  stack.yaml  traildb-haskell-benchmark.cabal
java/: Benchmark.java  Dockerfile.aholyoke
javascript/: Dockerfile  benchmark.js  package.json
python/: Dockerfile.pypy  Dockerfile.python2  Dockerfile.python3  benchmark.py  requirements.python3.txt  requirements.txt
rust/: Cargo.toml  Dockerfile  benchmark.rs
trck/: Dockerfile  benchmark.tr
